# hallmark-manager

./: .env.example  .gitignore  pyproject.toml  requirements.txt  schema.yml
backend/: main.py  pyproject.toml  schema.yaml  schema.yml
backend/config/: settings.py  urls.py
backend/core/: custome_views.py  filters.py  models.py  nestedserializer.py  paginations.py  permissions.py  serializers.py  urls.py  views.py
backend/core/migrations/: 0003_rename_groups_by_rate_rate_group.py  0005_alter_record_discount.py  0006_alter_allocation_payment_alter_allocation_record.py  0012_auditlog_action.py  0014_remove_profile_address_remove_profile_phone_number_and_more.py  0018_delete_profile.py  0019_alter_advance_total_amount_alter_advanceusage_amount_and_more.py  0022_remove_request_amount.py  0027_alter_auditlog_options_alter_payment_options_and_more.py
backend/core/services/: helper_functions.py  requestservices.py
backend/user/: admin.py  filters.py  models.py  serializers.py  subscription_view.py  urls.py  views.py
backend/user/Services/: emails.py  otpfunction.py  subcriptionservices.py  subscriptionlimit.py  subscriptionserviceshelpers.py
backend/user/migrations/: 0002_remove_user_address_remove_user_company_address_and_more.py  0003_otpverification.py  0006_merge_otp_into_userotp.py  0008_employee.py  0009_profile.py  0010_alter_profile_number.py  0011_profile_setting_mode.py  0014_subscriptionplan_usersubscription.py  0015_rename_tire_subscriptionplan_tier_and_more.py  0016_razorpayevent.py  0021_subscriptionplan_max_assigned_toes_and_more.py  (+8 more)
config/: urls.py  (+1 more)
(+105 files in other folders)
